Finished third iteration, adding the first recipes
Added a recipe for lentil burguers and linked it on the index.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a htrf="./recipes/lentilBurguer.html">Lentil Burguer</a>
+        <a href="./recipes/lentilBurguer.html">Lentil Burguer</a>
     </body>
 </html>
