--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/lentilBurguer.html">Lentil Burguer</a>
+        <a href="./recipes/lentilBurguer.html">Lentil Burguer.</a>
+        <a href=".recipes/lentilMeatballs.html">Lentil Meatballs.</a>
     </body>
 </html>
