Add recipe lentilMeatballs
Wrote the new recipe and linked it with the burguer recipe as they share their mix.

--- a/recipes/lentilBurguer.html
+++ b/recipes/lentilBurguer.html
@@ -45,7 +45,7 @@
             <li>Kill the heat and taste the mix, this is where all your flavor is so it should be overly salty and pack a punch of umami.</li>
             <li>In a bowl mix the cooked food with your boiled lentils and taste again. It should still be more salty than desired.</li>
             <li>Add the flour and cornstarch and mix. Then add the eggs and mix again. Put in the fridge for half an hour.</li>
-            <li>You now have my favorite veggie mixture. You can do a lot of stuff with them, like my vegetable meatballs, but now let’s shape them into balls and flatten them to make patties.</li>
+            <li>You now have my favorite veggie mixture. You can do a lot of stuff with them, like my <a href="lentilMeatballs.html">vegetable meatballs</a>, but now let’s shape them into balls and flatten them to make patties.</li>
             <li>Cook your patties on a thinly oiled pan. Cover it at first to cook it through and then leave it uncovered. When the edges are hardened and you can make the patty dance on the pan, flip it. Once both sides are nicely toasted, take out your patties.</li>
 
         </ol>
