--- a/recipes/lentilMeatballs.html
+++ b/recipes/lentilMeatballs.html
@@ -7,5 +7,26 @@
     <body>
         <h1>Lentil Meatballs.</h1>
         <img src="../img/albondigas.jpg">
+        <h2>Description:</h2>
+        <p>This recipe comes from my childhood love of meatballs and my desire to create a veggie equivalent. It also comes from me realizing the lentil burger recipe made too many burgers and wanting to use the mix for something else.</p>
+        <p>The issue I had to solve was texture. Proper meatballs are hardened on the outside because of being baked or fried by themselves, and then wet and soft everywhere else from being on a red sauce. I think I nailed it.</p>
+        <p>As with any of my recipes, these meatballs do well in the freezer and are appropriate for meal prep.</p>
+        <h3>Ingredients:</h3>
+        <ul>
+            <li>One third of the lentil mix from step fourteen of <a href="lentilBurguer.html">this recipe.</a></li>
+            <li>One egg.</li>
+            <li>Two tablespoons of cornstarch.</li>
+            <li>One tablespoon flour.</li>
+            <li>Half a cup of bread crumbs.</li>
+            <li>Frying oil.</li>
+        </ul>
+        <h3>Steps:</h3>
+        <ol>
+            <li>Either fill half a pan with oil if you want to fry them, or preheat your oven for ten minutes and add some oil to a pan.</li>
+            <li>Add and mix the flour, cornstarch, and bread crums to the lentil mix.</li>
+            <li>Add the egg and mix well.</li>
+            <li>Shape the mixture into balls and cook them until they're hard on the outside. If you bake them they'll stick to the pan until they're well cooked, so don't move them beforehand or you'll break them.</li>
+            <li>Add to a boiling sauce, eat them as they are, or freeze them for later use.</li>
+        </ol>
     </body>
 </html>
