--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="./recipes/lentilBurguer.html">Lentil Burguer.</a>
-        <a href="./recipes/lentilMeatballs.html">Lentil Meatballs.</a>
+        <h1><s>Odin</s> Chris' Recipes</h1>
+        <ul>
+             <li><a href="./recipes/lentilBurguer.html">Lentil Burguer.</a></li>
+             <li><a href="./recipes/lentilMeatballs.html">Lentil Meatballs.</a></li>
+             <li><a href="./recipes/falafel.html">Falafel.</a></li>
+         </ul>
     </body>
 </html>
