Finish the fourth iteration and third recipes
Wrote and linked the falafel recipe

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -8,4 +8,36 @@
         <h1>Falafel</h1>
         <img src="../img/falafel.jpg">
     </body>
+    <h2>Description</h2>
+    <p>Falafel is probably the definition of “Veggie food doesn't need to resemble meat to be amazing.” This dish from the Middle East is full of flavor and fat, nutritious, and calorie-heavy. It’s great on its own, but if you put it inside pita bread alongside hummus, tomato, and some fresh vegetables you may have the greatest sandwich known to men in your hands.</p>
+    <p>Let's make some. </p>
+    <h3>Ingredients:</h3>
+    <ul>
+        <li>200g of <strong>dry</strong> Chickpeas/Garbanzo beans. Canned chickpeas don't work for this recipe.</li>
+        <li>Two medium onions.</li>
+        <li>Three or four garlic cloves</li>
+        <li>Parsley, a lot of it.</li>
+        <li>Another green herb, cilantro or basil work well. A lot.</li>
+        <li>One lemon.</li>
+        <li>One tablespoons of cornstarch.</li>
+        <li>Two tablespoons of flour.</li>
+        <li>Frying oil.</li>
+        <li>4g Baking powder.</li>
+        <li>Spices as desired. Salt is obligatory, and black pepper, chilli flakes, and cumin work well with the recipe.</li>
+    </ul>
+    <h3>Steps:</h3>
+    <ol>
+        <li>Soak the garbanzo beans overnight. <em>Don't</em> boil them, keep them raw.</li>
+        <li>Chop all your vegetables and mix them. The fresh ones should be the majority, so if the mixture isn't green, add more herbs.</li>
+        <li>Mix the beans with your veggie mixture and spices.</li>
+        <li>Grate your lemon and add some of its yellow crust to the mix, then all of its juice.</li>
+        <li>Put the mixture in a food processor and blitz it to a paste. Do this in batches if your motor isn't too powerful.</li>
+        <li>Add flour, baking powder, and cornstarch to the mix. Mix it well and let it rest on the refrigerator for fifteen minutes.</li>
+        <li>Take the mixture out of the fridge and shape balls with it. They should be the size of old-timey large meatballs.</li>
+        <li>Let the falafel rest in the fridge for half an hour.</li>
+        <li>Fill a pot halfway or a frying pan with oil and put it on a medium flame. Wait at least five minutes for the temperature to raise.</li>
+        <li>Cook the falafel in batches so you don't crowd the pan. Remove when they become golden brown. Stir them only a few times to make sure they didn’t stick.</li>
+        <li>Enjoy!</li>
+
+    </ol>
 </html>
