Add a return to home buttom

--- a/recipes/lentilBurguer.html
+++ b/recipes/lentilBurguer.html
@@ -51,6 +51,6 @@
         </ol>
         <p>And that’s it! As I said, it’s a rather convoluted process, but it makes the best vegetarian patties you’ll try. You can play with the recipe and change any ingredient you’ll like, but some parts are vital.</p>
         <p>The lentils must be al dente, so the end product leaves you with a crunchy exterior that has a soft interior. And the soy sauce and hot sauce are vital for the intended depth of flavor. Anything else is up to you to play with. Bon appetite!</p>
-
+        <p><a href="../index.html">Return to home.</a></p>
     </body>
 </html>
