--- a/recipes/lentilMeatballs.html
+++ b/recipes/lentilMeatballs.html
@@ -28,5 +28,6 @@
             <li>Shape the mixture into balls and cook them until they're hard on the outside. If you bake them they'll stick to the pan until they're well cooked, so don't move them beforehand or you'll break them.</li>
             <li>Add to a boiling sauce, eat them as they are, or freeze them for later use.</li>
         </ol>
+        <p><a href="../index.html">Return to home.</a></p>
     </body>
 </html>
