Add pretty picture to index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1><s>Odin</s> Chris' Recipes</h1>
+        <img src="./img/present.jpg">
         <ul>
              <li><a href="./recipes/falafel.html">Falafel.</a></li>
              <li><a href="./recipes/lentilBurguer.html">Lentil Burguer.</a></li>
