add style to it
Created style.css and changed font,alignment and color for some elements

--- a/recipes/falafel.html
+++ b/recipes/falafel.html
@@ -3,10 +3,11 @@
     <head>
         <title>Falafel</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Falafel</h1>
-        <img src="../img/falafel.jpg">
+        <h1 class="title">Falafel</h1>
+        <img src="../img/falafel.jpg" class="img">
     </body>
     <h2>Description</h2>
     <p>Falafel is probably the definition of “Veggie food doesn't need to resemble meat to be amazing.” This dish from the Middle East is full of flavor and fat, nutritious, and calorie-heavy. It’s great on its own, but if you put it inside pita bread alongside hummus, tomato, and some fresh vegetables you may have the greatest sandwich known to men in your hands.</p>
@@ -41,5 +42,5 @@
 
     </ol>
 
-    <p><a href="../index.html">Return to home.</a></p>
+    <p><a href="../index.html"><button class="boton">Return to home</button></a></p>
 </html>
