--- a/recipes/lentilBurguer.html
+++ b/recipes/lentilBurguer.html
@@ -3,10 +3,11 @@
     <head>
         <title>Lentil Burguer</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Lentil Burguer</h1>
-        <img src="../img/burguer.jpg">
+        <h1 class="title">Lentil Burguer</h1>
+        <img src="../img/burguer.jpg" class="img">
         <h2>Description:</h2>
         <p>This recipe comes from my frustration with vegetarian patties.</p>
         <p>Veggie patties usually fall into two groups: bland mixes of vegetables with legumes, or food spiced with the only objective of making it resemble meat. I don’t care for either. Vegetables are amazing, and home cooks should strive higher than to simply mashing them together, roasting ‘em, and serving them. And vegetables aren’t meat, they shouldn’t try to emulate them. The copy will always be inferior.</p>
@@ -51,6 +52,6 @@
         </ol>
         <p>And that’s it! As I said, it’s a rather convoluted process, but it makes the best vegetarian patties you’ll try. You can play with the recipe and change any ingredient you’ll like, but some parts are vital.</p>
         <p>The lentils must be al dente, so the end product leaves you with a crunchy exterior that has a soft interior. And the soy sauce and hot sauce are vital for the intended depth of flavor. Anything else is up to you to play with. Bon appetite!</p>
-        <p><a href="../index.html">Return to home.</a></p>
+        <p><a href="../index.html"><button class="boton">Return to home</button></a></p>
     </body>
 </html>
