--- a/recipes/lentilMeatballs.html
+++ b/recipes/lentilMeatballs.html
@@ -3,10 +3,11 @@
     <head>
         <title>Lentil Meatballs.</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="../style.css">
     </head>
     <body>
-        <h1>Lentil Meatballs.</h1>
-        <img src="../img/albondigas.jpg">
+        <h1 class="title">Lentil Meatballs.</h1>
+        <img src="../img/albondigas.jpg" class="img">
         <h2>Description:</h2>
         <p>This recipe comes from my childhood love of meatballs and my desire to create a veggie equivalent. It also comes from me realizing the lentil burger recipe made too many burgers and wanting to use the mix for something else.</p>
         <p>The issue I had to solve was texture. Proper meatballs are hardened on the outside because of being baked or fried by themselves, and then wet and soft everywhere else from being on a red sauce. I think I nailed it.</p>
@@ -28,6 +29,6 @@
             <li>Shape the mixture into balls and cook them until they're hard on the outside. If you bake them they'll stick to the pan until they're well cooked, so don't move them beforehand or you'll break them.</li>
             <li>Add to a boiling sauce, eat them as they are, or freeze them for later use.</li>
         </ol>
-        <p><a href="../index.html">Return to home.</a></p>
+        <p><a href="../index.html"><button class="boton">Return to home</button></a></p>
     </body>
 </html>
