--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <title>Odin Recipes</title>
         <meta charset="UTF-8">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <h1><s>Odin</s> Chris' Recipes</h1>
-        <img src="./img/present.jpg">
-        <ul>
-             <li><a href="./recipes/falafel.html">Falafel.</a></li>
-             <li><a href="./recipes/lentilBurguer.html">Lentil Burguer.</a></li>
-             <li><a href="./recipes/lentilMeatballs.html">Lentil Meatballs.</a></li>             
-         </ul>
+        <h1 class="title"><s>Odin</s> Chris' Recipes</h1>
+        <img src="./img/present.jpg" class="main img">
+        
+        <a href="./recipes/falafel.html">Falafel</a>
+        <a href="./recipes/lentilBurguer.html"><div id="dos">Lentil Burger</div></a>
+        <a href="./recipes/lentilMeatballs.html"><div id="tres">Lentil Meatball</div></a>             
+         
     </body>
 </html>
