Change linking element from span to div

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <body>
         <h1 class="title"><s>Odin</s> Chris' Recipes</h1>
         <img src="./img/present.jpg" class="main img">
-        <span class="item">
+        <div class="item">
         <a href="./recipes/falafel.html">Falafel</a>
         <a id="dos" href="./recipes/lentilBurguer.html">Lentil Burger</a>
         <a id="tres" href="./recipes/lentilMeatballs.html">Lentil Meatball</a> 
-         </span> 
+        </div> 
                
          
     </body>
